objects/ers_datatableConfig__c.object
<CustomObject>
    <description>Store attributes for the Column Wizard Flow that is part of the Datatable CPE</description>
    <label>ers_datatableConfig</label>
    <nameField>
        <label>ers_datatableConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ers_datatableConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Edits__c</fullName>
        <label>Edits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icons__c</fullName>
        <label>Icons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wraps__c</fullName>
        <label>Wraps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Widths__c</fullName>
        <label>Widths</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filters__c</fullName>
        <label>Filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alignments__c</fullName>
        <label>Alignments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Attributes__c</fullName>
        <label>Cell Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Names__c</fullName>
        <label>Field API Names</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Attributes__c</fullName>
        <label>Type Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Attributes__c</fullName>
        <label>Other Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selection_Method__c</fullName>
        <label>Selection Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pick</fullName>
                    <default>true</default>
                    <label>Pick</label>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Field_API_Names__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>